<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:background="@color/colorWhite"
    tools:context=".activity.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/reg_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/colorBlack50"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack50"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"/>

                <EditText
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/hint_name"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/hint_email"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>

                <EditText
                    android:id="@+id/reg_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/hint_phone"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:inputType="phone"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password_outline_black_24dp"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>


                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/btn_register"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gradient"/>

                <Button
                    android:id="@+id/btn_login_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:textStyle="normal"
                    android:textSize="16dp"
                    android:gravity="center"
                     android:background="@drawable/reg_button_outline"
                    android:layout_marginTop="50dp"/>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>