<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    tools:context=".activity.RegisterActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/reg_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/fresh_green"
                    android:layout_marginBottom="100dp"/>

                <EditText
                    android:id="@+id/get_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="50dp"
                    android:hint="@string/hint_name"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:background="@drawable/edt_field_outline"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"/>


                <EditText
                    android:id="@+id/get_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/hint_phone"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:background="@drawable/edt_field_outline"
                    android:inputType="phone"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:layout_marginBottom="100dp"/>


                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient"
                    android:text="@string/btn_update"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>