<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_undraw_bus_stop"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wellcom"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlue50"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorBlack50"
                    android:textColorHint="@color/colorBlack50"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password_outline_black_24dp"
                    android:drawablePadding="@dimen/places_autocomplete_overlay_padding"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:scaleType="centerCrop" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_login"
                    android:textStyle="bold"
                    android:background="@drawable/gradient"
                    android:elevation="4dp" />

                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/reg_button_outline"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/btn_register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack50"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>