<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNews"
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:outlineAmbientShadowColor="@color/fresh_green">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-26dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/news2" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail"
                    android:background="@drawable/card_shape"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title_1"
                    android:textColor="#ffffff"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/description_1"
                    android:textAlignment="viewStart"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="910dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="489dp"
            android:animateLayoutChanges="true"
            android:outlineAmbientShadowColor="@color/fresh_green"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-26dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cashback" />

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail2"
                    android:background="@drawable/card_shape"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title_2"
                    android:textColor="#ffffff"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title2"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/description_2"
                    android:textAlignment="viewStart"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

</RelativeLayout>