<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.ArticleDetailActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="318dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/news2" />

    <TextView
        android:id="@+id/titleThumbnail"
        android:layout_width="279dp"
        android:layout_height="59dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="1dp"
        android:text="FOREST FIRES"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleThumbnail2"
        android:layout_width="117dp"
        android:layout_height="55dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif-thin"
        android:text="News"
        android:textColor="#E9E9E9"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:singleLine="false"
        android:clickable="true"
        android:text="@string/description_1"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNewsConten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:animateLayoutChanges="true"
        android:outlineAmbientShadowColor="@color/fresh_green"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_below="@id/cardNewsConten"
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTitleCV"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_below="@id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDateCV" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_below="@id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDescCV" />


        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_below="@id/txtDescription"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/news"
                android:paddingHorizontal="20dp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Share"
        android:textColor="@color/tosca_blue"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>